Day 05 IngressController-TLS-RegistrySecret-Probes/voting.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skillzverse-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skillzverse-frontend
  template:
    metadata:
      labels:
        app: skillzverse-frontend
    spec:
      containers:
        - name: frontend
          image: saihari1/skillzverse:client1
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: docker-pwd

---
apiVersion: v1
kind: Service
metadata:
  name: skillzverse-frontend-service
spec:
  selector:
    app: skillzverse-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skillzverse-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skillzverse-backend
  template:
    metadata:
      labels:
        app: skillzverse-backend
    spec:
      containers:
        - name: backend
          image: saihari1/skillzverse:server1
          ports:
            - containerPort: 8090
      imagePullSecrets:
        - name: docker-pwd

---
apiVersion: v1
kind: Service
metadata:
  name: skillzverse-backend-service
spec:
  selector:
    app: skillzverse-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
  type: ClusterIP
