Day 05 IngressController-TLS-RegistrySecret-Probes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillzverse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - polling.harinadh.xyz
        - app.harinadh.xyz
      secretName: nginx-tls-default

  rules:
    - host: polling.harinadh.xyz
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: skillzverse-frontend-service
                port:
                  number: 80

    - host: app.harinadh.xyz
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: skillzverse-backend-service
                port:
                  number: 80
